configurado margens da página

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 </head>
 <body>
+    <header>
+        <div class="logo">
+            <a href="https://rickandmortyapi.com/"><img src="/assets/logo.png" alt="Logo"></a>
+        </div>
+    </header>    
     
 </body>
 </html>
