adicionado campo de busca e node

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
             <a href="https://rickandmortyapi.com/"><img src="/assets/logo.png" alt="Logo"></a>
         </div>
     </header>    
-    
+<h1>API de Rick and Morty</h1>
+
+<div class="search">
+    <input type="text" id="searchInput" placeholder="Pesquise">
+    <button onclick="searchCharacters()"><i class="bi bi-search"></i></button>
+</div>
+
+
 </body>
 </html>
