--- a/index.html
+++ b/index.html
@@ -23,6 +23,29 @@
     <button onclick="searchCharacters()"><i class="bi bi-search"></i></button>
 </div>
 
+<div class="card-container" id="cardContainer"></div>
+
+<div id="pagination"></div>
+
+<div class="image-before-footer">
+    <img src="./assets/rick-and-morty-portal-shoes-white-clothing-zavvi-23.png" alt="Imagem RM">
+</div>
+
+<footer class="footer">
+    <ul>
+        <li>
+            <span id="characterCount">PERSONAGENS: </span>
+        </li>
+        <li>
+            <span id="locationCount">LOCALIZAÇÕES: </span>
+        </li>
+        <li>
+            <span id="episodeCount">EPISÓDIOS: </span>
+        </li>
+    </ul>
+    <span class="estilo"> DESENVOLVIDO POR <a href="https://github.com/igorfa17" target="_blank">IGOR FRANÇA</a> EM 2023</span>
+</footer>
+
 
 </body>
 </html>
