--- a/index.html
+++ b/index.html
@@ -1,231 +1,267 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/assets/favicon.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <title>API Rick and Morty</title>
-    <link rel="stylesheet" href="style.css">
-
-</head>
-<body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/assets/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <title>API RICK AND MORTY</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="logo">
-            <a href="https://rickandmortyapi.com/"><img src="/assets/logo.png" alt="Logo"></a>
-        </div>
-    </header>    
-<h1>API de Rick and Morty</h1>
+      <div class="logo">
+        <a href="https://rickandmortyapi.com/"
+          ><img src="/assets/logo.png" alt="Logo"
+        /></a>
+      </div>
+    </header>
 
-<div class="search">
-    <input type="text" id="searchInput" placeholder="Pesquise">
-    <button onclick="searchCharacters()"><i class="bi bi-search"></i></button>
-</div>
+    <h1>API de Rick and Morty</h1>
 
-<div class="card-container" id="cardContainer"></div>
+    <div class="search">
+      <input
+        type="text"
+        id="searchInput"
+        placeholder="Digite sua pesquisa..."
+      />
+      <button onclick="searchCharacters()"><i class="bi bi-search"></i></button>
+    </div>
 
-<div id="pagination"></div>
+    <div class="card-container" id="cardContainer"></div>
 
-<div class="image-before-footer">
-    <img src="./assets/rick-and-morty-portal-shoes-white-clothing-zavvi-23.png" alt="Imagem RM">
-</div>
+    <div id="pagination"></div>
 
-<footer class="footer">
-    <ul>
+    <div class="image-before-footer">
+      <img
+        src="./assets/rick-and-morty-portal-shoes-white-clothing-zavvi-23.png"
+        alt="Imagem RM"
+      />
+    </div>
+
+    <footer class="footer">
+      <ul>
         <li>
-            <span id="characterCount">PERSONAGENS: </span>
+          <span id="characterCount">PERSONAGENS: </span>
         </li>
         <li>
-            <span id="locationCount">LOCALIZAÇÕES: </span>
+          <span id="locationCount">LOCALIZAÇÕES: </span>
         </li>
         <li>
-            <span id="episodeCount">EPISÓDIOS: </span>
+          <span id="episodeCount">EPISÓDIOS: </span>
         </li>
-    </ul>
-    <span class="estilo"> DESENVOLVIDO POR <a href="https://github.com/igorfa17" target="_blank">IGOR FRANÇA</a> EM 2023</span>
-</footer>
+      </ul>
+      <span class="estilo">
+        DESENVOLVIDO POR
+        <a href="https://github.com/igorfa17">IGOR FRANÇA</a> EM 2023</span
+      >
+    </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script>
-    let currentPage = 1;
-    let totalPages = 1;
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script>
+      let currentPage = 1;
+      let totalPages = 1;
 
-    function getRandomCharacters() {
-  const apiUrl = 'https://rickandmortyapi.com/api/character/random';
+      function getRandomCharacters() {
+        const apiUrl = "https://rickandmortyapi.com/api/character/random";
 
-  axios.get(apiUrl)
-    .then(function (response) {
-      const character = response.data;
-      displayCharacters([character]); // Exibe o personagem em uma matriz para manter a consistência com a função displayCharacters
-    })
-    .catch(function (error) {
-      console.log(error);
-    });
-}
+        axios
+          .get(apiUrl)
+          .then(function (response) {
+            const character = response.data;
+            displayCharacters([character]); // Exibe o personagem em uma matriz para manter a consistência com a função displayCharacters
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+      }
 
-// Chame a função getRandomCharacters no carregamento inicial da página
-getRandomCharacters();
+      // Chama a função getRandomCharacters no carregamento inicial da página
+      getRandomCharacters();
 
-
-
-    function searchCharacters() {
-        const searchInput = document.getElementById('searchInput').value;
+      function searchCharacters() {
+        const searchInput = document.getElementById("searchInput").value;
         const apiUrl = `https://rickandmortyapi.com/api/character?name=${searchInput}&page=${currentPage}`;
 
-        axios.get(apiUrl)
-            .then(function (response) {
-                const characters = response.data.results;
-                totalPages = response.data.info.pages;
-                displayCharacters(characters);
-                updateCounts();
-                updatePagination();
-            })
-            .catch(function (error) {
-                console.log(error);
-            });
-    }
+        axios
+          .get(apiUrl)
+          .then(function (response) {
+            const characters = response.data.results;
+            totalPages = response.data.info.pages;
+            displayCharacters(characters);
+            updateCounts();
+            updatePagination();
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+      }
 
-    function displayCharacters(characters) {
-        const cardContainer = document.getElementById('cardContainer');
-        cardContainer.innerHTML = '';
+      function displayCharacters(characters) {
+        const cardContainer = document.getElementById("cardContainer");
+        cardContainer.innerHTML = "";
 
         characters.forEach(function (character) {
-            const card = document.createElement('article');
-            card.classList.add('card');
+          const card = document.createElement("article");
+          card.classList.add("card");
 
-            const image = document.createElement('img');
-            image.src = character.image;
-            image.alt = character.name;
-            card.appendChild(image);
+          const image = document.createElement("img");
+          image.src = character.image;
+          image.alt = character.name;
+          card.appendChild(image);
 
-            const cardText = document.createElement('div');
-            cardText.classList.add('card-text');
+          const cardText = document.createElement("div");
+          cardText.classList.add("card-text");
 
-            const name = document.createElement('h2');
-            name.textContent = character.name;
-            cardText.appendChild(name);
+          const name = document.createElement("h2");
+          name.textContent = character.name;
+          cardText.appendChild(name);
 
-            const status = document.createElement('h4');
-            status.innerHTML = `<span class="circle ${getStatusColor(character.status)}"></span>${character.status} - ${character.species}`;
-            cardText.appendChild(status);
+          const status = document.createElement("h4");
+          status.innerHTML = `<span class="circle ${getStatusColor(
+            character.status
+          )}"></span>${character.status} - ${character.species}`;
+          cardText.appendChild(status);
 
-            const lastLocationLabel = document.createElement('p');
-            lastLocationLabel.textContent = 'Última localização conhecida:';
-            cardText.appendChild(lastLocationLabel);
+          const lastLocationLabel = document.createElement("p");
+          lastLocationLabel.textContent = "Última localização conhecida:";
+          cardText.appendChild(lastLocationLabel);
 
-            const lastLocation = document.createElement('p');
-            axios.get(character.location.url)
-                .then(function (response) {
-                    lastLocation.textContent = response.data.name;
-                })
-                .catch(function (error) {
-                    console.log(error);
-                });
-            cardText.appendChild(lastLocation);
-
-            const lastSeenLabel = document.createElement('p');
-            lastSeenLabel.textContent = 'Visto a última vez em:';
-            cardText.appendChild(lastSeenLabel);
-
-            const lastSeen = document.createElement('p');
-            axios.get(character.episode[character.episode.length - 1])
-                .then(function (response) {
-                    lastSeen.textContent = response.data.name;
-                })
-                .catch(function (error) {
-                    console.log(error);
-                });
-            cardText.appendChild(lastSeen);
-
-            card.appendChild(cardText);
-            cardContainer.appendChild(card);
-        });
-    }
-
-    function updateCounts() {
-  axios.all([
-    axios.get('https://rickandmortyapi.com/api/character'),
-    axios.get('https://rickandmortyapi.com/api/location'),
-    axios.get('https://rickandmortyapi.com/api/episode')
-  ])
-    .then(axios.spread(function (characterResponse, locationResponse, episodeResponse) {
-      const characterCount = characterResponse.data.info.count;
-      const locationCount = locationResponse.data.info.count;
-      const episodeCount = episodeResponse.data.info.count;
-
-      document.getElementById('characterCount').textContent = `PERSONAGENS: ${characterCount}`;
-      document.getElementById('locationCount').textContent = `LOCALIZAÇÕES: ${locationCount}`;
-      document.getElementById('episodeCount').textContent = `EPISÓDIOS: ${episodeCount}`;
-    }))
-    .catch(function (error) {
-      console.log(error);
-    });
-}
-
-// Chame a função updateCounts no carregamento inicial da página
-updateCounts();
-
-
-    function searchLocations() {
-        axios.get('https://rickandmortyapi.com/api/location')
+          const lastLocation = document.createElement("p");
+          axios
+            .get(character.location.url)
             .then(function (response) {
-                const locationCount = response.data.info.count;
-                document.getElementById('locationCount').textContent = `LOCALIZAÇÕES: ${locationCount}`;
+              lastLocation.textContent = response.data.name;
             })
             .catch(function (error) {
-                console.log(error);
+              console.log(error);
             });
-    }
+          cardText.appendChild(lastLocation);
 
-    function getStatusColor(status) {
+          const lastSeenLabel = document.createElement("p");
+          lastSeenLabel.textContent = "Visto a última vez em:";
+          cardText.appendChild(lastSeenLabel);
+
+          const lastSeen = document.createElement("p");
+          axios
+            .get(character.episode[character.episode.length - 1])
+            .then(function (response) {
+              lastSeen.textContent = response.data.name;
+            })
+            .catch(function (error) {
+              console.log(error);
+            });
+          cardText.appendChild(lastSeen);
+
+          card.appendChild(cardText);
+          cardContainer.appendChild(card);
+        });
+      }
+
+      function updateCounts() {
+        axios
+          .all([
+            axios.get("https://rickandmortyapi.com/api/character"),
+            axios.get("https://rickandmortyapi.com/api/location"),
+            axios.get("https://rickandmortyapi.com/api/episode"),
+          ])
+          .then(
+            axios.spread(function (
+              characterResponse,
+              locationResponse,
+              episodeResponse
+            ) {
+              const characterCount = characterResponse.data.info.count;
+              const locationCount = locationResponse.data.info.count;
+              const episodeCount = episodeResponse.data.info.count;
+
+              document.getElementById(
+                "characterCount"
+              ).textContent = `PERSONAGENS: ${characterCount}`;
+              document.getElementById(
+                "locationCount"
+              ).textContent = `LOCALIZAÇÕES: ${locationCount}`;
+              document.getElementById(
+                "episodeCount"
+              ).textContent = `EPISÓDIOS: ${episodeCount}`;
+            })
+          )
+          .catch(function (error) {
+            console.log(error);
+          });
+      }
+
+      // Chame a função updateCounts no carregamento inicial da página
+      updateCounts();
+
+      function searchLocations() {
+        axios
+          .get("https://rickandmortyapi.com/api/location")
+          .then(function (response) {
+            const locationCount = response.data.info.count;
+            document.getElementById(
+              "locationCount"
+            ).textContent = `LOCALIZAÇÕES: ${locationCount}`;
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+      }
+
+      function getStatusColor(status) {
         switch (status) {
-            case 'Alive':
-                return 'green';
-            case 'Dead':
-                return 'red';
-            default:
-                return 'gray';
+          case "Alive":
+            return "green";
+          case "Dead":
+            return "red";
+          default:
+            return "gray";
         }
-    }
+      }
 
-    function goToPage(page) {
+      function goToPage(page) {
         if (page >= 1 && page <= totalPages) {
-            currentPage = page;
-            searchCharacters();
+          currentPage = page;
+          searchCharacters();
         }
-    }
+      }
 
-    function updatePagination() {
-        const pagination = document.getElementById('pagination');
-        pagination.innerHTML = '';
+      function updatePagination() {
+        const pagination = document.getElementById("pagination");
+        pagination.innerHTML = "";
 
         if (totalPages > 1) {
-            const previousButton = createPaginationButton('Anterior', currentPage - 1);
-            pagination.appendChild(previousButton);
+          const previousButton = createPaginationButton(
+            "Anterior",
+            currentPage - 1
+          );
+          pagination.appendChild(previousButton);
 
-            for (let i = 1; i <= totalPages; i++) {
-                const pageButton = createPaginationButton(i, i);
-                if (i === currentPage) {
-                    pageButton.classList.add('active');
-                }
-                pagination.appendChild(pageButton);
+          for (let i = 1; i <= totalPages; i++) {
+            const pageButton = createPaginationButton(i, i);
+            if (i === currentPage) {
+              pageButton.classList.add("active");
             }
+            pagination.appendChild(pageButton);
+          }
 
-            const nextButton = createPaginationButton('Próxima', currentPage + 1);
-            pagination.appendChild(nextButton);
+          const nextButton = createPaginationButton("Próxima", currentPage + 1);
+          pagination.appendChild(nextButton);
         }
-    }
+      }
 
-    function createPaginationButton(text, page) {
-        const button = document.createElement('button');
+      function createPaginationButton(text, page) {
+        const button = document.createElement("button");
         button.textContent = text;
-        button.addEventListener('click', function () {
-            goToPage(page);
+        button.addEventListener("click", function () {
+          goToPage(page);
         });
         return button;
-    }
-</script>
-
-</body>
+      }
+    </script>
+  </body>
 </html>
