códigos mais limpos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <title>API RICK AND MORTY</title>
+    <title>API Rick and Morty</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -27,7 +27,7 @@
       <input
         type="text"
         id="searchInput"
-        placeholder="Digite sua pesquisa..."
+        placeholder="Pesquise"
       />
       <button onclick="searchCharacters()"><i class="bi bi-search"></i></button>
     </div>
