--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,39 +9,29 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <title>API Rick and Morty</title>
+    <title>API RICK AND MORTY</title>
     <link rel="stylesheet" href="style.css" />
   </head>
+  <header>
+    <div class="logo">
+      <a href="https://rickandmortyapi.com/"
+        ><img src="/assets/RICK_MORTY_ICON.png" alt="Logo"
+      /></a>
+    </div>
+  </header>
   <body>
-    <header>
-      <div class="logo">
-        <a href="https://rickandmortyapi.com/"
-          ><img src="/assets/logo.png" alt="Logo"
-        /></a>
-      </div>
-    </header>
-
     <h1>API de Rick and Morty</h1>
 
     <div class="search">
-      <input
-        type="text"
-        id="searchInput"
-        placeholder="Pesquise"
-      />
+      <input type="text" id="searchInput" placeholder="Busque o personagem" />
       <button onclick="searchCharacters()"><i class="bi bi-search"></i></button>
     </div>
 
-    <div class="card-container" id="cardContainer"></div>
+    <div class="container">
+      <div class="card-container" id="cardContainer"></div>
+    </div>
 
     <div id="pagination"></div>
-
-    <div class="image-before-footer">
-      <img
-        src="./assets/rick-and-morty-portal-shoes-white-clothing-zavvi-23.png"
-        alt="Imagem RM"
-      />
-    </div>
 
     <footer class="footer">
       <ul>
@@ -57,41 +47,44 @@
       </ul>
       <span class="estilo">
         DESENVOLVIDO POR
-        <a href="https://github.com/igorfa17">IGOR FRANÇA</a> EM 2023</span
+        <a href="https://github.com/igorfa17" target="_blank">IGOR FRANÇA</a> EM
+        2023</span
       >
     </footer>
 
+    <div id="characterModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="modalData"></div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
-      let currentPage = 1;
-      let totalPages = 1;
+      function changeColors() {
+        const paragraphs = document.querySelectorAll(".modal-content p");
+        const colors = ["#26cb37", "#000d03"];
 
-      function getRandomCharacters() {
-        const apiUrl = "https://rickandmortyapi.com/api/character/random";
-
-        axios
-          .get(apiUrl)
-          .then(function (response) {
-            const character = response.data;
-            displayCharacters([character]); // Exibe o personagem em uma matriz para manter a consistência com a função displayCharacters
-          })
-          .catch(function (error) {
-            console.log(error);
-          });
+        paragraphs.forEach(function (paragraph) {
+          const randomColor = colors[Math.floor(Math.random() * colors.length)];
+          paragraph.style.color = randomColor;
+        });
       }
 
-      // Chama a função getRandomCharacters no carregamento inicial da página
-      getRandomCharacters();
+      setInterval(changeColors, 2000);
+
+      let currentPage = 1;
+      let totalPages = 1;
+      const cardsPerPage = 8;
 
       function searchCharacters() {
         const searchInput = document.getElementById("searchInput").value;
-        const apiUrl = `https://rickandmortyapi.com/api/character?name=${searchInput}&page=${currentPage}`;
+        const apiUrl = `https://rickandmortyapi.com/api/character?name=${searchInput}`;
 
         axios
           .get(apiUrl)
           .then(function (response) {
             const characters = response.data.results;
-            totalPages = response.data.info.pages;
+            totalPages = Math.ceil(characters.length / cardsPerPage);
             displayCharacters(characters);
             updateCounts();
             updatePagination();
@@ -105,7 +98,11 @@
         const cardContainer = document.getElementById("cardContainer");
         cardContainer.innerHTML = "";
 
-        characters.forEach(function (character) {
+        const startIndex = (currentPage - 1) * cardsPerPage;
+        const endIndex = startIndex + cardsPerPage;
+        const charactersToDisplay = characters.slice(startIndex, endIndex);
+
+        charactersToDisplay.forEach(function (character) {
           const card = document.createElement("article");
           card.classList.add("card");
 
@@ -159,7 +156,88 @@
 
           card.appendChild(cardText);
           cardContainer.appendChild(card);
+
+          // Adiciona um evento de clique ao card para abrir o modal
+          card.addEventListener("click", function () {
+            openModal(character);
+          });
         });
+      }
+
+      function openModal(character) {
+        const modal = document.getElementById("characterModal");
+        const modalData = document.getElementById("modalData");
+        modalData.innerHTML = "";
+
+        const name = document.createElement("h2");
+        name.textContent = character.name;
+        modalData.appendChild(name);
+
+        const image = document.createElement("img");
+        image.src = character.image;
+        image.alt = character.name;
+        modalData.appendChild(image);
+
+        const status = document.createElement("h4");
+        status.innerHTML = `<span class="circle ${getStatusColor(
+          character.status
+        )}"></span>${character.status} - ${character.species}`;
+        modalData.appendChild(status);
+
+        const lastLocationLabel = document.createElement("p");
+        lastLocationLabel.textContent = "Última localização conhecida:";
+        modalData.appendChild(lastLocationLabel);
+
+        const lastLocation = document.createElement("p");
+        axios
+          .get(character.location.url)
+          .then(function (response) {
+            lastLocation.textContent = response.data.name;
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+        modalData.appendChild(lastLocation);
+
+        const lastSeenLabel = document.createElement("p");
+        lastSeenLabel.textContent = "Visto a última vez em:";
+        modalData.appendChild(lastSeenLabel);
+
+        const lastSeen = document.createElement("p");
+        axios
+          .get(character.episode[character.episode.length - 1])
+          .then(function (response) {
+            lastSeen.textContent = response.data.name;
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+        modalData.appendChild(lastSeen);
+
+        modal.style.display = "block";
+
+        // Adiciona um evento de clique ao botão de fechar o modal
+        const closeButton = document.getElementsByClassName("close")[0];
+        closeButton.addEventListener("click", function () {
+          closeModal();
+        });
+
+        // Fecha o modal ao clicar fora do conteúdo do modal
+        window.addEventListener("click", function (event) {
+          if (event.target === modal) {
+            closeModal();
+          }
+        });
+      }
+
+      function closeModal() {
+        const modal = document.getElementById("characterModal");
+        const modalContent = document.querySelector(".modal-content");
+        modalContent.classList.add("fade-out");
+        setTimeout(() => {
+          modal.style.display = "none";
+          modalContent.classList.remove("fade-out");
+        }, 300);
       }
 
       function updateCounts() {
@@ -198,20 +276,6 @@
       // Chame a função updateCounts no carregamento inicial da página
       updateCounts();
 
-      function searchLocations() {
-        axios
-          .get("https://rickandmortyapi.com/api/location")
-          .then(function (response) {
-            const locationCount = response.data.info.count;
-            document.getElementById(
-              "locationCount"
-            ).textContent = `LOCALIZAÇÕES: ${locationCount}`;
-          })
-          .catch(function (error) {
-            console.log(error);
-          });
-      }
-
       function getStatusColor(status) {
         switch (status) {
           case "Alive":
@@ -235,11 +299,13 @@
         pagination.innerHTML = "";
 
         if (totalPages > 1) {
-          const previousButton = createPaginationButton(
-            "Anterior",
-            currentPage - 1
-          );
-          pagination.appendChild(previousButton);
+          if (currentPage > 1) {
+            const previousButton = createPaginationButton(
+              "Anterior",
+              currentPage - 1
+            );
+            pagination.appendChild(previousButton);
+          }
 
           for (let i = 1; i <= totalPages; i++) {
             const pageButton = createPaginationButton(i, i);
@@ -262,7 +328,45 @@
         });
         return button;
       }
-      
+
+      window.addEventListener("scroll", function () {
+        const scrollButton = document.getElementById("scrollButton");
+        if (document.documentElement.scrollTop > 200) {
+          scrollButton.classList.add("show");
+        } else {
+          scrollButton.classList.remove("show");
+        }
+      });
+
+      function scrollToTop() {
+        window.scrollTo({
+          top: 0,
+          behavior: "smooth",
+        });
+      }
+
+      function scrollToBottom() {
+        window.scrollTo({
+          top: document.documentElement.scrollHeight,
+          behavior: "smooth",
+        });
+      }
+      function getRandomCharacters() {
+        const randomPage = Math.floor(Math.random() * totalPages) + 1;
+        const apiUrl = `https://rickandmortyapi.com/api/character?page=${randomPage}`;
+
+        axios
+          .get(apiUrl)
+          .then(function (response) {
+            const characters = response.data.results;
+            displayCharacters(characters);
+          })
+          .catch(function (error) {
+            console.log(error);
+          });
+      }
+
+      getRandomCharacters();
     </script>
   </body>
 </html>
