adionado efeito no titulo e cards

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </div>
   </header>
   <body>
-    <h1>API de Rick and Morty</h1>
+    <a href="./index.html">
+      <h1>API de Rick and Morty</h1>
+    </a>
 
     <div class="search">
       <input type="text" id="searchInput" placeholder="Busque o personagem" />
